assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: %empty
    7             | feature ';' feature_list

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
    9        | OBJECTID '(' ')' ':' TYPEID '{' expression '}'
   10        | OBJECTID ':' TYPEID ASSIGN expression
   11        | OBJECTID ':' TYPEID

   12 formal_list: formal
   13            | formal_list ',' formal

   14 formal: OBJECTID ':' TYPEID

   15 expression: OBJECTID ASSIGN expression
   16           | expression '.' OBJECTID '(' expression_list ')'
   17           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   18           | OBJECTID '(' expression_list ')'
   19           | IF expression THEN expression ELSE expression FI
   20           | WHILE expression LOOP expression POOL
   21           | '{' block '}'
   22           | LET let_expression
   23           | CASE expression OF case_branch_list ESAC
   24           | NEW TYPEID
   25           | ISVOID expression
   26           | expression '+' expression
   27           | expression '-' expression
   28           | expression '*' expression
   29           | expression '/' expression
   30           | '~' expression
   31           | expression '<' expression
   32           | expression LE expression
   33           | expression '=' expression
   34           | NOT expression
   35           | '(' expression ')'
   36           | OBJECTID
   37           | INT_CONST
   38           | STR_CONST
   39           | BOOL_CONST

   40 expression_list: expression
   41                | expression_list ',' expression

   42 block: expression ';'
   43      | block expression ';'

   44 let_expression: OBJECTID ':' TYPEID IN expression
   45               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   46               | OBJECTID ':' TYPEID ',' let_expression
   47               | OBJECTID ':' TYPEID ASSIGN expression ',' let_expression

   48 case_branch_list: case_branch
   49                 | case_branch_list case_branch

   50 case_branch: OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 9 16 17 18 35
    ')' (41) 8 9 16 17 18 35
    '*' (42) 28
    '+' (43) 26
    ',' (44) 13 41 46 47
    '-' (45) 27
    '.' (46) 16 17
    '/' (47) 29
    ':' (58) 8 9 10 11 14 44 45 46 47 50
    ';' (59) 4 5 7 42 43 50
    '<' (60) 31
    '=' (61) 33
    '@' (64) 17
    '{' (123) 4 5 8 9 21
    '}' (125) 4 5 8 9 21
    '~' (126) 30
    error (256)
    CLASS (258) 4 5
    ELSE (259) 19
    FI (260) 19
    IF (261) 19
    IN (262) 44 45
    INHERITS (263) 5
    LET (264) 22
    LOOP (265) 20
    POOL (266) 20
    THEN (267) 19
    WHILE (268) 20
    CASE (269) 23
    ESAC (270) 23
    OF (271) 23
    DARROW (272) 50
    NEW (273) 24
    ISVOID (274) 25
    STR_CONST <symbol> (275) 38
    INT_CONST <symbol> (276) 37
    BOOL_CONST <boolean> (277) 39
    TYPEID <symbol> (278) 4 5 8 9 10 11 14 17 24 44 45 46 47 50
    OBJECTID <symbol> (279) 8 9 10 11 14 15 16 17 18 36 44 45 46 47 50
    ASSIGN (280) 10 15 45 47
    NOT (281) 34
    LE (282) 32
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5
        on right: 2 3
    feature_list <features> (49)
        on left: 6 7
        on right: 4 5 7
    feature <feature> (50)
        on left: 8 9 10 11
        on right: 7
    formal_list <formals> (51)
        on left: 12 13
        on right: 8 13
    formal <formal> (52)
        on left: 14
        on right: 12 13
    expression <expression> (53)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 8 9 10 15 16 17 19 20 23 25 26 27 28 29 30 31 32 33 34 35 40 41 42 43 44 45 47 50
    expression_list <expressions> (54)
        on left: 40 41
        on right: 16 17 18 41
    block <expressions> (55)
        on left: 42 43
        on right: 21 43
    let_expression <expression> (56)
        on left: 44 45 46 47
        on right: 22 46 47
    case_branch_list <cases> (57)
        on left: 48 49
        on right: 23 49
    case_branch <case_> (58)
        on left: 50
        on right: 48 49


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 12
    feature       go to state 13


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 11

    8 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
    9        | OBJECTID . '(' ')' ':' TYPEID '{' expression '}'
   10        | OBJECTID . ':' TYPEID ASSIGN expression
   11        | OBJECTID . ':' TYPEID

    '('  shift, and go to state 15
    ':'  shift, and go to state 16


State 12

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 17


State 13

    7 feature_list: feature . ';' feature_list

    ';'  shift, and go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 19
    feature       go to state 13


State 15

    8 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'
    9        | OBJECTID '(' . ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 20
    ')'       shift, and go to state 21

    formal_list  go to state 22
    formal       go to state 23


State 16

   10 feature: OBJECTID ':' . TYPEID ASSIGN expression
   11        | OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 24


State 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 25


State 18

    7 feature_list: feature ';' . feature_list

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 26
    feature       go to state 13


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 27


State 20

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 28


State 21

    9 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 29


State 22

    8 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'
   13 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 30
    ','  shift, and go to state 31


State 23

   12 formal_list: formal .

    $default  reduce using rule 12 (formal_list)


State 24

   10 feature: OBJECTID ':' TYPEID . ASSIGN expression
   11        | OBJECTID ':' TYPEID .

    ASSIGN  shift, and go to state 32

    $default  reduce using rule 11 (feature)


State 25

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 26

    7 feature_list: feature ';' feature_list .

    $default  reduce using rule 7 (feature_list)


State 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 33


State 28

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 34


State 29

    9 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 35


State 30

    8 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 36


State 31

   13 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 20

    formal  go to state 37


State 32

   10 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 52


State 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 34

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


State 35

    9 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 53


State 36

    8 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 54


State 37

   13 formal_list: formal_list ',' formal .

    $default  reduce using rule 13 (formal_list)


State 38

   19 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 55


State 39

   22 expression: LET . let_expression

    OBJECTID  shift, and go to state 56

    let_expression  go to state 57


State 40

   20 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 58


State 41

   23 expression: CASE . expression OF case_branch_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 59


State 42

   24 expression: NEW . TYPEID

    TYPEID  shift, and go to state 60


State 43

   25 expression: ISVOID . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 61


State 44

   38 expression: STR_CONST .

    $default  reduce using rule 38 (expression)


State 45

   37 expression: INT_CONST .

    $default  reduce using rule 37 (expression)


State 46

   39 expression: BOOL_CONST .

    $default  reduce using rule 39 (expression)


State 47

   15 expression: OBJECTID . ASSIGN expression
   18           | OBJECTID . '(' expression_list ')'
   36           | OBJECTID .

    ASSIGN  shift, and go to state 62
    '('     shift, and go to state 63

    $default  reduce using rule 36 (expression)


State 48

   34 expression: NOT . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 64


State 49

   30 expression: '~' . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 65


State 50

   21 expression: '{' . block '}'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 66
    block       go to state 67


State 51

   35 expression: '(' . expression ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 68


State 52

   10 feature: OBJECTID ':' TYPEID ASSIGN expression .
   16 expression: expression . '.' OBJECTID '(' expression_list ')'
   17           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . '<' expression
   32           | expression . LE expression
   33           | expression . '=' expression

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 10 (feature)


State 53

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' . expression '}'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 78


State 54

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 79


State 55

   16 expression: expression . '.' OBJECTID '(' expression_list ')'
   17           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | IF expression . THEN expression ELSE expression FI
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . '<' expression
   32           | expression . LE expression
   33           | expression . '=' expression

    THEN  shift, and go to state 80
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 56

   44 let_expression: OBJECTID . ':' TYPEID IN expression
   45               | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   46               | OBJECTID . ':' TYPEID ',' let_expression
   47               | OBJECTID . ':' TYPEID ASSIGN expression ',' let_expression

    ':'  shift, and go to state 81


State 57

   22 expression: LET let_expression .

    $default  reduce using rule 22 (expression)


State 58

   16 expression: expression . '.' OBJECTID '(' expression_list ')'
   17           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   20           | WHILE expression . LOOP expression POOL
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . '<' expression
   32           | expression . LE expression
   33           | expression . '=' expression

    LOOP  shift, and go to state 82
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 59

   16 expression: expression . '.' OBJECTID '(' expression_list ')'
   17           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   23           | CASE expression . OF case_branch_list ESAC
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . '<' expression
   32           | expression . LE expression
   33           | expression . '=' expression

    OF   shift, and go to state 83
    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77


State 60

   24 expression: NEW TYPEID .

    $default  reduce using rule 24 (expression)


State 61

   16 expression: expression . '.' OBJECTID '(' expression_list ')'
   17           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   25           | ISVOID expression .
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . '<' expression
   32           | expression . LE expression
   33           | expression . '=' expression

    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 25 (expression)


State 62

   15 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 84


State 63

   18 expression: OBJECTID '(' . expression_list ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 85
    expression_list  go to state 86


State 64

   16 expression: expression . '.' OBJECTID '(' expression_list ')'
   17           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . '<' expression
   32           | expression . LE expression
   33           | expression . '=' expression
   34           | NOT expression .

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 34 (expression)


State 65

   16 expression: expression . '.' OBJECTID '(' expression_list ')'
   17           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | '~' expression .
   31           | expression . '<' expression
   32           | expression . LE expression
   33           | expression . '=' expression

    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 30 (expression)


State 66

   16 expression: expression . '.' OBJECTID '(' expression_list ')'
   17           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   31           | expression . '<' expression
   32           | expression . LE expression
   33           | expression . '=' expression
   42 block: expression . ';'

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    ';'  shift, and go to state 87


State 67

   21 expression: '{' block . '}'
   43 block: block . expression ';'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '}'         shift, and go to state 88
    '('         shift, and go to state 51
